--- a/web/src/components/common/style.css
+++ b/web/src/components/common/style.css
@@ -290,3 +290,13 @@ button{
 .menuLinks{
 	color: white;
 }
+
+.recBox{
+	width: 75%;
+	height: 75vh;
+	margin-left: 20%;
+	margin-top: 7vh;
+	overflow-y: scroll; 
+	overflow-x: hidden;
+	background-color: red;
+}
