--- a/web/src/components/common/style.css
+++ b/web/src/components/common/style.css
@@ -258,35 +258,6 @@ button{
     padding: 4px 28px;
 }
 
-.myMusic{
-	height: 88vh;
-	width: 20%;
-	float:left;
-	background-color: rgb(40,40,40);
-	-webkit-box-shadow: inset 0px -14px 74px 3px rgba(0,0,0,0.75);
-	-moz-box-shadow: inset 0px -14px 74px 3px rgba(0,0,0,0.75);
-	box-shadow: inset 0px -14px 74px 3px rgba(0,0,0,0.75);
-	overflow-y: scroll;
-	overflow-x: hidden; 
-}
-
-.songCell{
-	width: 50%;
-	margin-left: 2%;
-	padding-left: 10%;
-	border-top: 1px solid rgb(77,77,77);
-	border-right: 1px solid rgb(77,77,77);
-	color: rgb(150,150,150);
-}
-
-.songCelltwo{
-	width: 50%;
-	margin-left: 2%;
-	padding-left: 10%;
-	border-top: 1px solid rgb(77,77,77);
-	color: rgb(150,150,150);
-}
-
 .menuLinks{
 	color: white;
 }
@@ -298,5 +269,68 @@ button{
 	margin-top: 7vh;
 	overflow-y: scroll; 
 	overflow-x: hidden;
-	background-color: red;
+}
+
+.surpriseBox{
+	width: 65%;
+	height: 65vh;
+	margin-left: 25%;
+	margin-top: 12vh;
+	position: relative;
+}
+
+.continent{
+	width: 32%;
+	height: 48%;
+	float: left;
+	margin-top: 1%;
+	margin-left: 1%;
+	border: 1px solid rgb(200,200,200);
+	box-shadow: 0px 0px 0px 15px white inset;
+	border-radius: 20px;
+	-webkit-transition-duration: 0.5s; /* Safari */
+    transition-duration: 0.5s;
+}
+
+.continent:hover{
+	-ms-transform: scale(0.8,0.8); /* IE 9 */
+    -webkit-transform: scale(0.8,0.8); /* Safari */
+    transform: scale(0.8,0.8);
+}
+
+.imageCell{
+	width: 30px;
+	border-top: 1px solid rgb(77,77,77);
+	border-right: 1px solid rgb(77,77,77);
+}
+
+.songCell{
+	width: 50%;
+	margin-left: 3%;
+	padding-left: 2%;
+	border-top: 1px solid rgb(77,77,77);
+	border-right: 1px solid rgb(77,77,77);
+	color: rgb(150,150,150);
+}
+
+.songCelltwo{
+	width: 50%;
+	margin-left: 3%;
+	padding-left: 2%;
+	border-top: 1px solid rgb(77,77,77);
+	color: rgb(150,150,150);
+}
+
+.myMusic{
+	height: 88vh;
+	width: 20%;
+	float:left;
+	background-color: rgb(25,25,25);
+	-webkit-box-shadow: inset 0px -14px 74px 3px rgba(0,0,0,0.75);
+	-moz-box-shadow: inset 0px -14px 74px 3px rgba(0,0,0,0.75);
+	box-shadow: inset 0px -14px 74px 3px rgba(0,0,0,0.75);
+	overflow-y: scroll;
+	overflow-x: hidden; 
+	padding-left: 5px;
+	font-size: 12px;
 }
